[gd_scene load_steps=46 format=2]

[ext_resource path="res://sprites/cams/rhall.png" type="Texture" id=1]
[ext_resource path="res://sprites/office/door/f8.png" type="Texture" id=2]
[ext_resource path="res://sprites/office/door/f3.png" type="Texture" id=3]
[ext_resource path="res://sprites/office/door/f1.png" type="Texture" id=4]
[ext_resource path="res://sprites/office/door/f5.png" type="Texture" id=5]
[ext_resource path="res://sprites/office/door/f4.png" type="Texture" id=6]
[ext_resource path="res://sprites/office/door/fa.png" type="Texture" id=7]
[ext_resource path="res://sprites/office/door/f7.png" type="Texture" id=8]
[ext_resource path="res://sprites/office/door/f2.png" type="Texture" id=9]
[ext_resource path="res://sprites/office/door/f6.png" type="Texture" id=10]
[ext_resource path="res://objects/office/doors.gd" type="Script" id=11]
[ext_resource path="res://objects/maingame/pov.gd" type="Script" id=12]
[ext_resource path="res://objects/maingame/main.gd" type="Script" id=13]
[ext_resource path="res://sprites/office/door/f0.png" type="Texture" id=14]
[ext_resource path="res://sprites/office/door/ee.png" type="Texture" id=15]
[ext_resource path="res://objects/office/office.tscn" type="PackedScene" id=16]
[ext_resource path="res://sprites/cams/gamer.png" type="Texture" id=17]
[ext_resource path="res://audio/doorFX.wav" type="AudioStream" id=18]
[ext_resource path="res://sprites/office/vdoor/17f.png" type="Texture" id=19]
[ext_resource path="res://sprites/cams/cove.png" type="Texture" id=20]
[ext_resource path="res://sprites/cams/funcove.png" type="Texture" id=21]
[ext_resource path="res://sprites/office/vdoor/17e.png" type="Texture" id=22]
[ext_resource path="res://sprites/cams/lhall.png" type="Texture" id=23]
[ext_resource path="res://sprites/office/vdoor/17b.png" type="Texture" id=24]
[ext_resource path="res://sprites/hud/ductvent/232.png" type="Texture" id=25]
[ext_resource path="res://sprites/office/vdoor/181.png" type="Texture" id=26]
[ext_resource path="res://sprites/office/vdoor/17d.png" type="Texture" id=27]
[ext_resource path="res://sprites/office/vdoor/17c.png" type="Texture" id=28]
[ext_resource path="res://sprites/cams/counter.png" type="Texture" id=29]
[ext_resource path="res://sprites/cams/closet.png" type="Texture" id=30]
[ext_resource path="res://sprites/fx/flash/fb.png" type="Texture" id=31]
[ext_resource path="res://audio/jackinthebox.wav" type="AudioStream" id=32]
[ext_resource path="res://objects/maingame/pause.gd" type="Script" id=33]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 15 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 8 ) ],
"loop": false,
"name": "play",
"speed": 60.0
} ]

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ null, ExtResource( 19 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 22 ) ],
"loop": false,
"name": "play",
"speed": 60.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 30 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 29 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=47]

[sub_resource type="Animation" id=51]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1889, -273 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -104, 0 ) ]
}

[sub_resource type="Animation" id=52]
resource_name = "yeah"
length = 14.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 7, 11, 14 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -104, 0 ), Vector2( 106, 0 ), Vector2( 106, 0 ), Vector2( -104, 0 ), Vector2( -104, 0 ) ]
}

[node name="main" type="Node2D"]
script = ExtResource( 13 )
__meta__ = {
"_edit_vertical_guides_": [ -1248.0 ]
}

[node name="blackback" type="ColorRect" parent="."]
margin_left = -1698.0
margin_top = -733.0
margin_right = 1607.0
margin_bottom = 692.0
mouse_filter = 1
color = Color( 0, 0, 0, 1 )

[node name="office" parent="." instance=ExtResource( 16 )]
position = Vector2( 1, -3 )
__meta__ = {
"_edit_lock_": true
}

[node name="doors" type="Node2D" parent="."]
position = Vector2( 1, -3 )
z_index = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="door" type="AudioStreamPlayer" parent="doors"]
stream = ExtResource( 18 )

[node name="ldoor" type="AnimatedSprite" parent="doors"]
position = Vector2( -932, 92 )
frames = SubResource( 1 )
animation = "play"

[node name="rdoor" type="AnimatedSprite" parent="doors"]
position = Vector2( 896, 92 )
frames = SubResource( 1 )
animation = "play"
flip_h = true

[node name="vdoor" type="AnimatedSprite" parent="doors"]
position = Vector2( 1148, 401 )
frames = SubResource( 20 )
animation = "play"

[node name="cameras" type="Node2D" parent="."]
z_index = 6
z_as_relative = false
__meta__ = {
"_edit_lock_": true
}

[node name="lhall" type="AnimatedSprite" parent="cameras"]
position = Vector2( -1889, -273 )
frames = SubResource( 2 )
animation = "empty"
__meta__ = {
"_edit_lock_": true
}

[node name="closet" type="AnimatedSprite" parent="cameras"]
position = Vector2( -3174, -604 )
frames = SubResource( 3 )
animation = "empty"
__meta__ = {
"_edit_lock_": true
}

[node name="cove" type="AnimatedSprite" parent="cameras"]
position = Vector2( -1893, -1026 )
frames = SubResource( 4 )
animation = "empty"
__meta__ = {
"_edit_lock_": true
}

[node name="gamer" type="AnimatedSprite" parent="cameras"]
position = Vector2( -1896, -1666 )
frames = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="rhall" type="AnimatedSprite" parent="cameras"]
position = Vector2( 1907, -268 )
frames = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="kitchen" type="AnimatedSprite" parent="cameras"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 2025, -963 )
frames = SubResource( 6 )

[node name="vent" type="AnimatedSprite" parent="cameras"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -87, -1127 )
frames = SubResource( 6 )

[node name="counter" type="AnimatedSprite" parent="cameras"]
position = Vector2( -75, -1826 )
frames = SubResource( 7 )
animation = "empty"

[node name="fcove" type="AnimatedSprite" parent="cameras"]
position = Vector2( 1959, -1661 )
frames = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="ventmap" type="Sprite" parent="cameras"]
position = Vector2( -208, -1131 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 25 )
__meta__ = {
"_edit_lock_": true
}

[node name="campov" type="Camera2D" parent="."]
position = Vector2( -1889, -273 )
z_index = 7
z_as_relative = false
offset = Vector2( -104, 0 )
zoom = Vector2( 1, 0.9 )

[node name="camHitbox" type="Area2D" parent="campov"]

[node name="camHitshape" type="CollisionShape2D" parent="campov/camHitbox"]
shape = SubResource( 47 )
disabled = true

[node name="camMover" type="AnimationPlayer" parent="campov"]
anims/RESET = SubResource( 51 )
anims/yeah = SubResource( 52 )

[node name="pov" type="Camera2D" parent="."]
position = Vector2( 1, 0 )
current = true
zoom = Vector2( 1.75, 1.75 )
limit_left = -1248
limit_right = 1248
script = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="shakeTween" type="Tween" parent="pov"]

[node name="freq" type="Timer" parent="pov"]

[node name="duration" type="Timer" parent="pov"]

[node name="flash" type="Sprite" parent="pov"]
visible = false
self_modulate = Color( 1, 1, 1, 0.454902 )
position = Vector2( -2.77777, 24 )
scale = Vector2( 3.72593, 3.72593 )
z_index = 5
texture = ExtResource( 31 )

[node name="powerNum" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="gameTimer" type="Timer" parent="."]
wait_time = 270.0
one_shot = true
autostart = true

[node name="ventpov" type="Camera2D" parent="."]
position = Vector2( -68, -1133 )
z_index = 30
zoom = Vector2( 1, 0.8 )

[node name="jackinthebox" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 32 )

[node name="uhOh" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="pauser" type="Node2D" parent="."]
pause_mode = 2
script = ExtResource( 33 )

[connection signal="timeout" from="pov/freq" to="." method="_on_freq_timeout"]
[connection signal="timeout" from="pov/duration" to="." method="_on_duration_timeout"]
[connection signal="timeout" from="powerNum" to="." method="_on_powerConsumption_timeout"]
[connection signal="timeout" from="gameTimer" to="." method="_on_gameTimer_timeout"]
[connection signal="timeout" from="uhOh" to="." method="_on_uhOh_timeout"]
